ticket swagger, controller + routes
